--- a/app/views/plannings/_timeline.html.erb
+++ b/app/views/plannings/_timeline.html.erb
@@ -1,1 +1,20 @@
-<div> planning</div>
+<section class="objects">
+      <div class="timelineDiary" id="picture_95">
+  <div class="thumb">
+    <div class="caption_img"><p>D</p></div>
+    <img alt="95" data-modal-carousel-content="&lt;img alt=&quot;95&quot; src=&quot;/pictures/95.jpeg?style=500&quot; /&gt;" data-modal-carousel-id="5" src="/pictures/95.jpeg?style=170x127%23">
+  </div>
+
+  <div class="text">
+    <h6>
+      diario_toledo
+    </h6>
+
+    <div class="description">
+  <p> <a href="/pictures/95" class="view_more">Ver detalles...</a></p>
+</div>
+
+  </div>
+</div>
+<div class="clearfloat"></div>
+</section>
