timeline diaries changes2

--- a/app/views/plannings/_timeline.html.erb
+++ b/app/views/plannings/_timeline.html.erb
@@ -7,11 +7,11 @@
 
   <div class="text">
     <h6>
-      diario_toledo
+      Diary from Trip: Toledo Oct13
     </h6>
 
     <div class="description">
-  <p> <a href="/pictures/95" class="view_more">Ver detalles...</a></p>
+  <p>Toledo (pronounced: [toˈleðo]; Latin: Toletum, Arabic: طليطلة‎, DIN: Ṭulayṭulah) is a municipality located in central Spain, 70 km south of Madrid. It is the capital of the province of Toledo. <a href="/pictures/95" class="view_more">Ver detalles...</a></p>
 </div>
 
   </div>
