--- a/app/assets/stylesheets/city/binakuru/timeline.css.sass
+++ b/app/assets/stylesheets/city/binakuru/timeline.css.sass
@@ -10,7 +10,7 @@
 			position: relative
 			margin-top: 45px
 			.media
-				border-bottom: 1px dashed $gray
+				border-bottom: 1px dashed $grayLighter
 				position: relative
 				.avatar
 
@@ -77,6 +77,7 @@
 										width: 100%
 										word-wrap: break-word
 										@include objectsDescription
+
 					.actions
 						margin-top: 20px
 						clear: both
@@ -122,17 +123,60 @@
 							color: $white
 							font-family: $LatoItalic
 					
+					div.new_comment
+						.avatar
+							display: none
+							width: 30px
+							float: left
+							img
+								@include border-top-left-radius(15px)
+								@include border-top-right-radius(15px)
+								@include border-bottom-right-radius(0px)
+								@include border-bottom-left-radius(15px)
+								width: 30px
+								height: 30px
+						form.new_comment
+							textarea
+								@include border-radius (0)
+								width: auto
+								margin-bottom: 0px
+								height: 26px
+								resize: none
+								margin-left: 147px
+							textarea:active
+								height: auto
+							input.btn
+								height: 36px
+								width: 70px      
+								margin-left: -5px        
+
+								@include border-top-left-radius(0px)
+								@include border-top-right-radius(18px)
+								@include border-bottom-right-radius(18px)
+								@include border-bottom-left-radius(0px)
+								background-color: $color1
+								color: $white
+								background-image: none
+								border: none
+
+								font-size: 12px
+
+
+
 					.comments
+						background-color: #f9f9f9
 						clear: both
 						@include grid-fluid-span(10, $fluidGridColumnWidth, $fluidGridGutterWidth)
 						margin-left: auto
 						margin-right: auto
 						display: block
+						margin-top: 30px
 						.media
 							margin-left: 5px
 							border-bottom: none
 							.avatar
 								.media-object
+									margin-top: 5px
 									a
 										img
 											@include border-top-left-radius(20px)
@@ -142,6 +186,7 @@
 											width: 40px
 											height: 40px
 							.media-heading
+								padding-top: 5px
 								display: inline-block
 								float: left
 								width: 80%
@@ -160,12 +205,13 @@
 									font-family: $OpenSans
 									font-size: 12px
 									line-height: 15px
+									padding-right: 10px
 								.actions
 									margin-bottom: -10px
 									margin-top: 0
 									.post_time_ago
 										text-align: right
-										margin-top: -10px
+										margin-top: -30px
 										font-size: 11px
 										font-family: $LatoLightItalic
 										color: $gray
@@ -173,6 +219,10 @@
 										background-image: none
 										@include border-radius(0)
 										padding: 5px
+										height: 20px
+										width: auto
+										position: relative
+										float: right
 										p
 
 											color: $gray !important
