--- a/app/views/plannings/_timeline.html.erb
+++ b/app/views/plannings/_timeline.html.erb
@@ -2,7 +2,7 @@
       <div class="timelineDiary" id="picture_95">
   <div class="thumb">
     <div class="caption_img"><p>D</p></div>
-    <img alt="95" data-modal-carousel-content="&lt;img alt=&quot;95&quot; src=&quot;/pictures/95.jpeg?style=500&quot; /&gt;" data-modal-carousel-id="5" src="/pictures/95.jpeg?style=170x127%23">
+    <img src="/assets/san_juan.jpg" alt="">
   </div>
 
   <div class="text">
