timeline diaries changes4

--- a/app/assets/stylesheets/city/binakuru/timeline.css.sass
+++ b/app/assets/stylesheets/city/binakuru/timeline.css.sass
@@ -72,6 +72,7 @@
 								display: inline-block
 								h6
 									@include objectsTitle
+									margin-top: -6px
 								.description
 									p
 										width: 100%
@@ -112,6 +113,7 @@
 								display: inline-block
 								h6
 									@include objectsTitle
+									margin-top: -6px
 								.description
 									p
 										width: 100%
