--- a/app/views/plannings/_timeline.html.erb
+++ b/app/views/plannings/_timeline.html.erb
@@ -1,13 +1,13 @@
 <section class="objects">
       <div class="timelineDiary" id="picture_95">
   <div class="thumb">
-    <div class="caption_img"><p>D</p></div>
-    <img src="/assets/san_juan.jpg" alt="">
+    <div class="caption_img"><p>P</p></div>
+    <img src="/assets/toledo2.jpg" alt="">
   </div>
 
   <div class="text">
     <h6>
-      Diary from Trip: Toledo Oct13
+      Planning from Trip: Toledo Oct13
     </h6>
 
     <div class="description">
