--- a/app/views/diaries/_timeline.html.erb
+++ b/app/views/diaries/_timeline.html.erb
@@ -1,1 +1,20 @@
-<div>diarios</div>
+<section class="objects">
+      <div class="timelineDiary" id="picture_95">
+  <div class="thumb">
+    <div class="caption_img"><p>D</p></div>
+    <img src="/assets/san_juan.jpg" alt="">
+  </div>
+
+  <div class="text">
+    <h6>
+      Diary from Trip: Toledo Oct13
+    </h6>
+
+    <div class="description">
+  <p>Toledo (pronounced: [toˈleðo]; Latin: Toletum, Arabic: طليطلة‎, DIN: Ṭulayṭulah) is a municipality located in central Spain, 70 km south of Madrid. It is the capital of the province of Toledo. <a href="/pictures/95" class="view_more">Ver detalles...</a></p>
+</div>
+
+  </div>
+</div>
+<div class="clearfloat"></div>
+</section>
