timeline diaries changes5

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -17,7 +17,7 @@
 	</div>
 
   <div class="related">
-      <p>related events</p>
+      <p class="sections">related events</p>
       <div class="related_events related_all">
         <%= render :partial => 'routes/calendar' %>
       </div>
