--- a/app/assets/stylesheets/city/binakuru/plannings.css.sass
+++ b/app/assets/stylesheets/city/binakuru/plannings.css.sass
@@ -97,6 +97,7 @@
     li
       margin-left: 13px
       width: 85px
+      opacity: 0.7
       img 
         width: 100%
         height: 85px
@@ -105,6 +106,7 @@
       img 
         width: 100%
         height: 85px
+
 #prg_small
   .thumbnails 
     li
