--- a/app/views/plannings/_item_small.html.erb
+++ b/app/views/plannings/_item_small.html.erb
@@ -1,30 +1,30 @@
 <li class="" rel="tooltip" title="name" data-original-title="Hi">
+	<%= image_tag('toledo_rio3.jpeg') %>
+</li>
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
+	<%= image_tag('san_juan.jpg') %>
+</li>
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
 	<%= image_tag('panoramica_toledo.jpg') %>
 </li>
-<li class="">
-	<%= image_tag('panoramica_toledo.jpg') %>
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
+	<%= image_tag('catedral3.jpg') %>
 </li>
-<li class="">
-	<%= image_tag('panoramica_toledo.jpg') %>
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
+	<%= image_tag('alcazar4.jpg') %>
 </li>
-<li class="">
-	<%= image_tag('panoramica_toledo.jpg') %>
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
+	<%= image_tag('adolfo.jpg') %>
 </li>
-<li class="">
-	<%= image_tag('panoramica_toledo.jpg') %>
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
+	<%= image_tag('picaro.jpg') %>
 </li>
-<li class="">
-	<%= image_tag('panoramica_toledo.jpg') %>
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
+	<%= image_tag('ruta_toledo.jpg') %>
 </li>
-<li class="">
-	<%= image_tag('panoramica_toledo.jpg') %>
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
+	<%= image_tag('alcazar_biblioteca.jpg') %>
 </li>
-<li class="">
-	<%= image_tag('panoramica_toledo.jpg') %>
-</li>
-<li class="">
-	<%= image_tag('panoramica_toledo.jpg') %>
-</li>
-<li class="">
-	<%= image_tag('panoramica_toledo.jpg') %>
+<li class="" rel="tooltip" title="name" data-original-title="Hi">
+	<%= image_tag('san_juan_reyes.jpg') %>
 </li>
