--- a/app/views/frontpage/_map_frontpage.html.erb
+++ b/app/views/frontpage/_map_frontpage.html.erb
@@ -18,21 +18,21 @@
 
 
 
-    <div class="trip_Z">
-      
-    </div>
+      <button class="trip_Z" onClick="parent.location='/trips/1'" rel="tooltip" title="toledo" data-original-title="Hi">
 
-     <div class="trip_x">
-      
-    </div>
+      </button>
 
-     <div class="trip_y">
-      
-    </div>
+     <button class="trip_x" ronClick="parent.location='/trips/1'" rel="tooltip" title="new york" data-original-title="Hi">
+       
+     </button>
 
-     <div class="trip_w">
-      
-    </div>
+     <button class="trip_y" onClick="parent.location='/trips/1'" rel="tooltip" title="london" data-original-title="Hi">
+       
+     </button>
+
+     <button class="trip_w" onClick="parent.location='/trips/1'" rel="tooltip" title="india" data-original-title="Hi">
+       
+     </button>
 
 
 
