--- a/app/views/frontpage/_users_frontpage.html.erb
+++ b/app/views/frontpage/_users_frontpage.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="app_front">
 
-    <p class="topx">dowload app</p>
+    <p class="topx">download app</p>
     <%= link_to(image_tag('movil.jpg')) %>
   </div>
   
