--- a/app/assets/stylesheets/city/binakuru/front.css.sass
+++ b/app/assets/stylesheets/city/binakuru/front.css.sass
@@ -36,8 +36,8 @@
 
     position: relative
     width: 100%
-    height: 550px
-    background: url("worldmap.jpg")
+    height: 420px
+    background: url("worldmap3.jpg")
     .inspire_Z
       z-index: 2
       @include border-top-left-radius(40px)
@@ -45,8 +45,8 @@
       @include border-bottom-right-radius(40px)
       @include border-bottom-left-radius(40px)
       background-color: $color1
-      width: 8.5%
-      height: 15%
+      width: 70px
+      height: 70px
       float: right
       margin-top: 5%
       margin-right: 5%
@@ -58,61 +58,69 @@
         text-align: center
         input
         @include center-block
-        margin-top: 30px
+        margin-top: 22px
 
 
     .trip_Z
       z-index: 4
-      @include border-top-left-radius(8px)
-      @include border-top-right-radius(8px)
-      @include border-bottom-right-radius(8px)
-      @include border-bottom-left-radius(8px)
+      @include border-top-left-radius(10px)
+      @include border-top-right-radius(10px)
+      @include border-bottom-right-radius(10px)
+      @include border-bottom-left-radius(10px)
       background-color: $color1
-      width: 2%
-      height: 3%
+      border-style:solid
+      border-color: white
+      width: 20px
+      height: 20px
       float: left
-      margin-top: 20%
-      margin-left: 70%
+      margin-top: 13%
+      margin-left: 47%
+      position: absolute
 
 
     .trip_x
       z-index: 5
-      @include border-top-left-radius(8px)
-      @include border-top-right-radius(8px)
-      @include border-bottom-right-radius(8px)
-      @include border-bottom-left-radius(8px)
+      @include border-top-left-radius(10px)
+      @include border-top-right-radius(10px)
+      @include border-bottom-right-radius(10px)
+      @include border-bottom-left-radius(10px)
       background-color: $color1
-      width: 2%
-      height: 3%
+      width: 20px
+      height: 20px
       float: left
-      margin-top: 5%
-      margin-left: 90%
+      margin-top: 14%
+      margin-left: 26%
+      position: absolute
 
-      .trip_y
+    .trip_y
       z-index: 6
-      @include border-top-left-radius(8px)
-      @include border-top-right-radius(8px)
-      @include border-bottom-right-radius(8px)
-      @include border-bottom-left-radius(8px)
+      @include border-top-left-radius(10px)
+      @include border-top-right-radius(10px)
+      @include border-bottom-right-radius(10px)
+      @include border-bottom-left-radius(10px)
       background-color: $color1
-      width: 2%
-      height: 3%
+      width: 20px
+      height: 20px
       float: right
-      margin-top: 10%
-      margin-left: 20%
+      margin-top: 9%
+      margin-left: 47%
+      position: absolute
 
-      .trip_w
+    .trip_w
       z-index: 7
-      @include border-top-left-radius(8px)
-      @include border-top-right-radius(8px)
-      @include border-bottom-right-radius(8px)
-      @include border-bottom-left-radius(8px)
+      @include border-top-left-radius(10px)
+      @include border-top-right-radius(10px)
+      @include border-bottom-right-radius(10px)
+      @include border-bottom-left-radius(10px)
       background-color: $color1
-      width: 2%
-      height: 3%
+      border-style:solid
+      border-color:white
+      width: 20px
+      height: 20px
       float: left
       margin-top: 20%
-      margin-left: 70%
+      margin-left: 71%
+      position: absolute
       
 
 
