--- a/app/assets/stylesheets/city/binakuru/front.css.sass
+++ b/app/assets/stylesheets/city/binakuru/front.css.sass
@@ -73,8 +73,8 @@
       width: 20px
       height: 20px
       float: left
-      margin-top: 13%
-      margin-left: 47%
+      margin-top: 125px
+      margin-left: 450px
       position: absolute
 
 
@@ -88,8 +88,8 @@
       width: 20px
       height: 20px
       float: left
-      margin-top: 14%
-      margin-left: 26%
+      margin-top: 140px
+      margin-left: 250px
       position: absolute
 
     .trip_y
@@ -102,8 +102,8 @@
       width: 20px
       height: 20px
       float: right
-      margin-top: 9%
-      margin-left: 47%
+      margin-top: 90px
+      margin-left: 460px
       position: absolute
 
     .trip_w
@@ -118,8 +118,8 @@
       width: 20px
       height: 20px
       float: left
-      margin-top: 20%
-      margin-left: 71%
+      margin-top: 190px
+      margin-left: 685px
       position: absolute
       
 
