--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,3 @@
 <li class="avatar" rel="tooltip" title=<%= user.name %> data-original-title="Hi">
-  <%= link_to(image_tag(user.logo.url(:medium))) %>
+  <%= link_to(image_tag(user.logo.url(:medium)), user) %>
 </li>
