Add empty logo to plannings

--- a/app/views/plannings/_item_small.html.erb
+++ b/app/views/plannings/_item_small.html.erb
@@ -13,12 +13,18 @@
 <li class="" rel="tooltip" title=<%= Trip.first.places[1].title %> data-original-title="Hi">
 	<%= link_to thumb_for(Trip.first.places[1].main_picture, '500'), Trip.first.places[1]%>
 </li>
-<li class="" rel="tooltip" title="name" data-original-title="Hi">
-	<%= image_tag('san_juan.jpg') %>
+<li class="">
+	<%= image_tag('empty.png') %>
 </li>
-<li class="" rel="tooltip" title="name" data-original-title="Hi">
-	<%= image_tag('panoramica_toledo.jpg') %>
+<li class="">
+	<%= image_tag('empty.png') %>
 </li>
-<li class="" rel="tooltip" title="name" data-original-title="Hi">
-	<%= image_tag('catedral3.jpg') %>
+<li class="">
+	<%= image_tag('empty.png') %>
+</li>
+<li class="">
+	<%= image_tag('empty.png') %>
+</li>
+<li class="">
+	<%= image_tag('empty.png') %>
 </li>
