sing in & trips carrousel

--- a/app/assets/stylesheets/city/binakuru/plannings.css.sass
+++ b/app/assets/stylesheets/city/binakuru/plannings.css.sass
@@ -101,6 +101,8 @@
       img 
         width: 100%
         height: 85px
+      &:hover
+        opacity: 1
     li:first-child
       margin-left: 0px
       img 
