--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -24,9 +24,12 @@
           opacity: 0.8
           margin-top: 220px
         p.lead
+          width: 220px
           color: $gray
-          font-size: 16px
+          font-size: 14px
           display: inline-block
+          word-wrap: ellipsis
+          height: 63px
     .title-trip
       height: 188px
       width: 188px
@@ -38,6 +41,7 @@
       margin-top: 20px
       margin-left: 625px
       text-align: center
+      opacity: 0.95
       h1
         margin-top: 70px
         color: $white
