--- a/app/views/trips/_info.html.erb
+++ b/app/views/trips/_info.html.erb
@@ -16,7 +16,7 @@
       <%= image_tag('panoramica_toledo.jpg') %>
       <div class="container">
         <div class="carousel-caption">
-          <h2>The city of the three cultures</h2>
+          <h2>Cultures</h2>
           <p class="lead">Toledo was a place of coexistence of Christian, Muslim and Jewish cultures</p>
         </div>
       </div>
@@ -25,7 +25,7 @@
       <%= image_tag('panoramica_toledo.jpg') %>
       <div class="container">
         <div class="carousel-caption">
-          <h2>Misterious Toledo</h2>
+          <h2>Misterious </h2>
           <p class="lead">That walled city that shows and hides an inexhaustible wealth of surprises</p>
         </div>
       </div>
