--- a/app/views/routes/_info.html.erb
+++ b/app/views/routes/_info.html.erb
@@ -1,5 +1,5 @@
 <div class="info">
-  <h4>This is a guide from <%= @route.trip.title %> trip</h4>
+  <p>This is a routes from <%= @route.trip.title %> trip</p>
   <!-- <div class="info">
     <div class="cover">
       <%= image_tag('ninja.jpeg') %>
@@ -16,5 +16,7 @@
     </div>
     <%= render :partial => 'activities/comments', :locals => { :activity => @route.post_activity } %>
   </div> -->
+  <p>Duration: 3 hours</p>  
+  <p>Places: Alcázar, Catedral y plaza Zocodover</p>
 </div>
 
