--- a/app/views/guides/_info.html.erb
+++ b/app/views/guides/_info.html.erb
@@ -1,5 +1,5 @@
 <div class="info">
-  <h4>This is a guide from <%= @guide.trip.title %> trip</h4>
+  <p>This is a guide from <%= @guide.trip.title %> trip</p>
   <!--div class="info">
     <div class="cover">
       <%= thumb_for(@guide.main_picture, '500') %>
@@ -18,4 +18,6 @@
     </div>
     <%= render :partial => 'activities/comments', :locals => { :activity => @guide.post_activity } %>
   </div-->
+   <p>Duration: 16 hours</p>  
+   <p>Places: Alcázar, Catedral y plaza Zocodover</p>
 </div>
