--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -48,6 +48,27 @@
       <% @guide.places.each do |p| %>
         <%= render :partial => "guides/small_item", :locals => {:place => p} %>
       <% end %>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+           <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
     </ul>
 </div>
 
