--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -40,7 +40,7 @@
         </div> 
         </div>     
     </div>
-  
+   <div class="btn_map map_prg"><a href="">map mode</a></div>
 
 
 
@@ -51,9 +51,30 @@
       <% @route.places.each do |p| %>
         <%= render :partial => "guides/small_item", :locals => {:place => p} %>
       <% end %>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+           <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
+      <li class="">
+        <%= image_tag('empty.png') %>
+      </li>
     </ul>
 </div>
-  <div class="btn_map map_prg"><a href="">map mode</a></div>
+ 
 
 
 
