--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -28,7 +28,7 @@
     float: right
     background-color: white
     .btn-add
-      margin-left: 23%
+      margin-left: 281px
       margin-top: 16px
       float: right
       z-index: 1
@@ -84,11 +84,12 @@
             width: 0
     .info 
       text-align: left
-      padding-top: 40px
+      padding-top: 38px
       padding-right: 25px
       padding-left: 32px
       padding-bottom: 10px
       @include info
+      line-height: 16px
     .title_prg
       background-color: #0DA592
       border-radius: 100px 
@@ -221,9 +222,10 @@
   ul.thumbnails
     li
       display: inline-block
-.map_prg
-
-  margin-left: 26%
+      margin-left: 26%
 .section_contents
   margin-left: 47%
   @include section
+.map_prg
+  margin-left: 267px
+  margin-top: 2px !important
