--- a/app/views/routes/_info.html.erb
+++ b/app/views/routes/_info.html.erb
@@ -17,6 +17,6 @@
     <%= render :partial => 'activities/comments', :locals => { :activity => @route.post_activity } %>
   </div> -->
   <p>Duration: 3 hours</p>  
-  <p>Places: Alcázar, Catedral y plaza Zocodover</p>
+  <p>Places: Alcázar, Cathedral and Zocodover Square</p>
 </div>
 
