--- a/app/views/guides/_info.html.erb
+++ b/app/views/guides/_info.html.erb
@@ -19,5 +19,5 @@
     <%= render :partial => 'activities/comments', :locals => { :activity => @guide.post_activity } %>
   </div-->
    <p>Duration: 16 hours</p>  
-   <p>Places: Alcázar, Catedral y plaza Zocodover</p>
+   <p>Places: Alcázar, Cathedral and Zocodover Square</p>
 </div>
