Add ajax requests to planning show

--- a/app/views/plannings/_user_plannings.html.erb
+++ b/app/views/plannings/_user_plannings.html.erb
@@ -1,4 +1,5 @@
 <div>
+  <%= link_to(planning, remote: true) do %>
   <div class="img_planning"></div>
   <div class="title_planning"><a><%= planning.title %></a></div>
   <div class="other_info">
@@ -15,4 +16,5 @@
       <li><a href="">Members: Carol, Juan Carlos, Adriana, Víctor</a></li>
     </ul>
   </div>
+  <% end %>
 </div>
