--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -33,7 +33,7 @@
           width: 100%
           height: 100%
           text-align: center
-          a 
+          .description
             @include toolbarLinks
             display: block
             position: absolute
@@ -91,7 +91,7 @@
       li.diaries
         width: 10%
         margin-right: 2.42%
-        a 
+        .description
           @include toolbarLinks2
           width: 88px
           margin: 4px
