Update planning info ajax request

--- a/app/views/plannings/index.html.erb
+++ b/app/views/plannings/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div id="title_section"><p>plannings</p></div>
 <div id="planning">
-  <div class="planning_info">
+  <div id="planning_info" class="planning_info">
     <%= render :partial => "user_plannings", :locals => {:planning => @plannings.first} %>
   </div>
   <div class="menu_views">
