--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -38,7 +38,7 @@
             display: block
             position: absolute
             text-align: center
-            height: 100%
+            //height: 100%
             top: 35%
             width: 100%
           ul  
