--- a/app/views/plannings/show.js.erb
+++ b/app/views/plannings/show.js.erb
@@ -1,1 +1,3 @@
+$("#planning_info").html("<%= escape_javascript(render('user_plannings', {planning: @planning})) %>")
 $("#planning_content").html("<%= escape_javascript(render('planning_content', {planning: @planning})) %>")
+
